manifests/one-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one-deployment
  namespace: rp3
  labels: 
    app: one
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: one
  template:
    metadata:
      labels:
        app: one
    spec:
      volumes:
        - name: config
          configMap:
            name: fluent-conf-christopher-gonzalez
      containers:
        - name: fluentd
          ports: 
          - containerPort: 24224
          image: grafana/fluent-plugin-loki:latest
          volumeMounts:
          - name: config
            mountPath: /fluentd/etc/fluent.conf
            subPath: fluent.conf
        - name: p-one
          image: speedy1096/project-one:latest
          ports:
          - containerPort: 8080
