manifests/production-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-store-canary
  namespace: rp3 
  labels: 
    app: one
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: one
      track: stable
  template:
    metadata:
      labels:
        app: one
        track: stable
    spec:
      volumes:
        - name: config
          configMap:
            name: fluent-conf
      containers:
        - name: fluentd
          ports: 
          - containerPort: 24224
          image: grafana/fluent-plugin-loki:latest
          volumeMounts:
          - name: config
            mountPath: /fluentd/etc/fluent.conf
            subPath: fluent.conf
        - name: p-one
          image: $DOCKER_IMAGE_NAME:$GIT_COMMIT
          ports:
          - containerPort: 8080
