manifests/one-service.yml
apiVersion: v1
kind: Service
metadata:
  name: one-service
  namespace: christopher-gonzalez
spec:
  selector:
    app: one
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
